# natasha

./: CMakeLists.txt  README.md  main.cpp
lib/libfortuna/: internal.h
samples/: rule410.json
src/: basedef.cpp  basedef.hpp  csv.cpp  csv.hpp  gamerules.hpp  gamescene.cpp  gamescene.hpp  gamescene_mat.hpp  payrule.hpp  payrule_normal.hpp  payrule_paytables.hpp  payrules.hpp  payrules_normal.hpp  payrules_paytables.hpp  symbol.cpp  symbol.hpp
